# ecu-scheme

./: .gitignore  CMakeLists.txt  assemble_8h_source.html  assembler_8cc_source.html  assembler_8h_source.html  assembly__types_8h_source.html  base_8h_source.html  check__child__geometry_8cc_source.html  check__geometry__orientation_8cc_source.html  check__geometry__orientation_8h_source.html  check__integration__element_8cc_source.html  check__jacobian_8cc_source.html  check__jacobian__inverse__gramian_8cc_source.html  check__jacobian__inverse__gramian_8h_source.html  check__local__topology_8cc_source.html  check__local__topology_8h_source.html  check__mesh__completeness_8h_source.html  check__sub__geometry_8h_source.html  class_variant_visitor.html  classlf_1_1assemble_1_1_c_o_o_matrix.html  classlf_1_1assemble_1_1_dof_handler.html  classlf_1_1assemble_1_1_uniform_f_e_dof_handler.html  classlf_1_1base_1_1_auto_timer.html  classlf_1_1base_1_1_invalid_type_exception.html  classlf_1_1base_1_1_lehr_fem_info.html  classlf_1_1base_1_1_lf_exception.html  classlf_1_1base_1_1_ref_el.html  classlf_1_1fe_1_1_diffusion_element_matrix_provider.html  classlf_1_1fe_1_1_fe_hierarchic_quad.html  classlf_1_1fe_1_1_fe_point.html  classlf_1_1fe_1_1_hierarchic_scalar_f_e_space.html  classlf_1_1fe_1_1_mass_element_matrix_provider.html  classlf_1_1fe_1_1_mesh_function_grad_f_e.html  classlf_1_1fe_1_1_scalar_load_edge_vector_provider.html  classlf_1_1fe_1_1_scalar_reference_finite_element.html  classlf_1_1fe_1_1test__utils_1_1_complex_scalar_reference_finite_element.html  classlf_1_1geometry_1_1_geometry.html  classlf_1_1geometry_1_1_refinement_pattern.html  classlf_1_1geometry_1_1_segment_o1.html  classlf_1_1geometry_1_1_tria_o1.html  (+146 more)
docs/: all__codim__mesh__data__set_8h_source.html  annotated.html  annulus__triag__mesh__builder_8cc_source.html  assembler_8h_source.html  basic__mesh__builder_8cc_source.html  bdc__utils_8cc_source.html  bdc__utils_8h_source.html  build__system__matrix_8cc_source.html  build__system__matrix_8h_source.html  check__child__geometry_8h_source.html  check__entity__indexing_8cc_source.html  check__geometry__orientation_8cc_source.html  check__integration__element_8cc_source.html  check__integration__element_8h_source.html  check__jacobian_8cc_source.html  check__jacobian_8h_source.html  check__jacobian__inverse__gramian_8h_source.html  check__local__topology_8cc_source.html  check__mesh__completeness_8cc_source.html  check__sub__geometry_8cc_source.html  class_fisher_k_p_p_1_1_strang_split.html  classecu__scheme_1_1assemble_1_1_convection_upwind_matrix_provider.html  classecu__scheme_1_1assemble_1_1_edge_element_grad_matrix_provider.html  classecu__scheme_1_1assemble_1_1_edge_element_mass_matrix_provider.html  classecu__scheme_1_1assemble_1_1_fifteen_point_upwind_matrix_provider-members.html  classecu__scheme_1_1assemble_1_1_fifteen_point_upwind_matrix_provider.html  classecu__scheme_1_1assemble_1_1_s_u_p_g_element_matrix_provider-members.html  classecu__scheme_1_1assemble_1_1_s_u_p_g_element_matrix_provider.html  classecu__scheme_1_1assemble_1_1_supg_convective_e_m_p-members.html  classecu__scheme_1_1assemble_1_1_supg_convective_e_m_p.html  classecu__scheme_1_1experiments_1_1_concentric_stream_solution-members.html  classecu__scheme_1_1experiments_1_1_const_velo_solution-members.html  classecu__scheme_1_1experiments_1_1_manufactured_solution_experiment-members.html  classecu__scheme_1_1mesh_1_1_basic_mesh_builder.html  classes.html  classlf_1_1base_1_1_lehr_fem_info.html  classlf_1_1base_1_1_line_feed_formatter.html  classlf_1_1base_1_1_timer.html  classlf_1_1fe_1_1_fe_point.html  classlf_1_1fe_1_1_mass_edge_matrix_provider.html  (+239 more)
html/: annulus__triag__mesh__builder_8h_source.html  assembler_8cc_source.html  assembly__types_8h_source.html  base_8h_source.html  class_variant_visitor.html  (+277 more)
projects/ecu_scheme/: CMakeLists.txt  README.md  main.sh
projects/ecu_scheme/assemble/: CMakeLists.txt  assemble.h  bdc_utils.cc  bdc_utils.h  convection_upwind_matrix_provider.cc  convection_upwind_matrix_provider.h  diffusion_matrix_provider.cc  diffusion_matrix_provider.h  edge_element_grad_matrix_provider.cc  edge_element_grad_matrix_provider.h  edge_element_mass_matrix_provider.cc  edge_element_mass_matrix_provider.h  fifteen_point_upwind_matrix_provider.cc  fifteen_point_upwind_matrix_provider.h  load_vector_provider.h  lumped_mass_matrix_provider.cc  lumped_mass_matrix_provider.h  mesh_function_one_form.h  stable_convection_prov.cc  stable_convection_prov.h  supg_linear_matrix_provider.cc  supg_linear_matrix_provider.h  supg_matrix_provider.cc  supg_matrix_provider.h
projects/ecu_scheme/experiments/: CMakeLists.txt
projects/ecu_scheme/experiments/advection_one_form_experiments/: CMakeLists.txt
projects/ecu_scheme/experiments/advection_one_form_experiments/rotating_hump/: CMakeLists.txt  rotating_hump_sol.cc  rotating_hump_sol.h  rotating_hump_test.cc
projects/ecu_scheme/experiments/concentric_stream/: CMakeLists.txt  concentric_stream_solution.cc  concentric_stream_solution.h  concentric_stream_test.cc
projects/ecu_scheme/experiments/const_velo/: CMakeLists.txt  const_velo_solution.cc  const_velo_solution.h  const_velo_test.cc
projects/ecu_scheme/experiments/manufactured_sol/: CMakeLists.txt  manufactured_solution.cc  manufactured_solution.h  manufactured_test.cc
projects/ecu_scheme/experiments/smooth_vertex/: CMakeLists.txt  smooth_vertex_solution.cc  smooth_vertex_solution.h  smooth_vertex_test.cc
projects/ecu_scheme/experiments/testexp/: CMakeLists.txt  expfittedupwind.cc  expfittedupwind.h  expfittedupwind_main.cc  upwindquadrature.cc  upwindquadrature.h  upwindquadrature_main.cc
projects/ecu_scheme/experiments/testexp/test/: CMakeLists.txt  convection_emp.h  upwindquadrature_test.cc
projects/ecu_scheme/mesh/: CMakeLists.txt  basic_mesh_builder.cc  basic_mesh_builder.h  mesh.h
projects/ecu_scheme/post_processing/: CMakeLists.txt  ecu_tools.cc  ecu_tools.h  norms.h  plot_convergence.py  plot_convergence_comparison.py  post_processing.h  results_processing.h
(+614 files in other folders)
